WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234189
Momentum Event Dispatcher: Magic Mouse doesn't use momentum event dispatcher
https://bugs.webkit.org/show_bug.cgi?id=234189
Summary
Momentum Event Dispatcher: Magic Mouse doesn't use momentum event dispatcher
Tim Horton
Reported
2021-12-10 17:23:22 PST
Momentum Event Dispatcher: Magic Mouse doesn't use momentum event dispatcher
Attachments
Patch
(6.29 KB, patch)
2021-12-10 17:24 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2021-12-10 17:24:40 PST
Created
attachment 446850
[details]
Patch
Tim Horton
Comment 2
2021-12-10 17:24:43 PST
<
rdar://problem/86344954
>
Simon Fraser (smfr)
Comment 3
2021-12-10 17:27:57 PST
Comment on
attachment 446850
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446850&action=review
> Source/WebKit/Shared/mac/ScrollingAccelerationCurveMac.mm:123 > + return fromFixedPoint([(NSNumber *)valueCF.get() floatValue]);
Do we need to guard against it not being a CFNumber?
Tim Horton
Comment 4
2021-12-10 17:29:59 PST
Comment on
attachment 446850
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446850&action=review
>> Source/WebKit/Shared/mac/ScrollingAccelerationCurveMac.mm:123 >> + return fromFixedPoint([(NSNumber *)valueCF.get() floatValue]); > > Do we need to guard against it not being a CFNumber?
see the dynamic_cf_cast above
EWS
Comment 5
2021-12-10 19:45:00 PST
Committed
r286900
(
245128@main
): <
https://commits.webkit.org/245128@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446850
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug